Skip to content

Proxy lookup code crashes

0   libobjc.A.dylib                     0x00007fff8c37e750 objc_msgSend_vtable14   16
1   com.apple.CoreFoundation            0x00007fff8b3de28a CFRelease   170
2   com.apple.CoreFoundation            0x00007fff8b3e283a __CFBasicHashDrain   442
3   com.apple.CoreFoundation            0x00007fff8b3de3df CFRelease   511
4   libvlccore.7.dylib                  0x000000010010975e vlc_getProxyUrl   574
5   libaccess_http_plugin.dylib         0x0000000100403cf2 OpenWithCookies   2194
6   libaccess_http_plugin.dylib         0x00000001004030b5 Open   53
7   libvlccore.7.dylib                  0x00000001000e477a generic_start   138
8   libvlccore.7.dylib                  0x00000001000e4486 module_load   166
9   libvlccore.7.dylib                  0x00000001000e3fc3 vlc_module_load   1363
10  libvlccore.7.dylib                  0x00000001000e46e6 module_need   70

coin coin.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information